Second modification version in Google Colab

--- a/MyFirstProgram.ipynb
+++ b/MyFirstProgram.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2FU+/Xjn91lZlG1yjK3M8",
+      "authorship_tag": "ABX9TyPAfy4V9KKVOQofsjnfy7Jf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -218,218 +218,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!pip --help"
+        "How to connect my google drive..."
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bsZkqXQEbWKo",
-        "outputId": "543f8857-6d84-4f11-853c-20566d667c98"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Usage:   \n",
-            "  pip3 <command> [options]\n",
-            "\n",
-            "Commands:\n",
-            "  install                     Install packages.\n",
-            "  download                    Download packages.\n",
-            "  uninstall                   Uninstall packages.\n",
-            "  freeze                      Output installed packages in requirements format.\n",
-            "  list                        List installed packages.\n",
-            "  show                        Show information about installed packages.\n",
-            "  check                       Verify installed packages have compatible dependencies.\n",
-            "  config                      Manage local and global configuration.\n",
-            "  search                      Search PyPI for packages.\n",
-            "  cache                       Inspect and manage pip's wheel cache.\n",
-            "  wheel                       Build wheels from your requirements.\n",
-            "  hash                        Compute hashes of package archives.\n",
-            "  completion                  A helper command used for command completion.\n",
-            "  debug                       Show information useful for debugging.\n",
-            "  help                        Show help for commands.\n",
-            "\n",
-            "General Options:\n",
-            "  -h, --help\n",
-            "  Show help.\n",
-            "  --isolated\n",
-            "  Run pip in\n",
-            "  an isolated\n",
-            "  mode,\n",
-            "  ignoring\n",
-            "  environment\n",
-            "  variables\n",
-            "  and user co\n",
-            "  nfiguration\n",
-            "  .\n",
-            "  -v, --verbose\n",
-            "  Give more\n",
-            "  output.\n",
-            "  Option is\n",
-            "  additive,\n",
-            "  and can be\n",
-            "  used up to\n",
-            "  3 times.\n",
-            "  -V, --version\n",
-            "  Show\n",
-            "  version and\n",
-            "  exit.\n",
-            "  -q, --quiet\n",
-            "  Give less\n",
-            "  output.\n",
-            "  Option is\n",
-            "  additive,\n",
-            "  and can be\n",
-            "  used up to\n",
-            "  3 times (co\n",
-            "  rresponding\n",
-            "  to WARNING,\n",
-            "  ERROR, and\n",
-            "  CRITICAL\n",
-            "  logging\n",
-            "  levels).\n",
-            "  --log <path>\n",
-            "  Path to a\n",
-            "  verbose\n",
-            "  appending\n",
-            "  log.\n",
-            "  --no-input\n",
-            "  Disable\n",
-            "  prompting\n",
-            "  for input.\n",
-            "  --proxy <proxy>\n",
-            "  Specify a\n",
-            "  proxy in\n",
-            "  the form [u\n",
-            "  ser:passwd@\n",
-            "  ]proxy.serv\n",
-            "  er:port.\n",
-            "  --retries <retries>\n",
-            "  Maximum\n",
-            "  number of\n",
-            "  retries\n",
-            "  each\n",
-            "  connection\n",
-            "  should\n",
-            "  attempt\n",
-            "  (default 5\n",
-            "  times).\n",
-            "  --timeout <sec>\n",
-            "  Set the\n",
-            "  socket\n",
-            "  timeout\n",
-            "  (default 15\n",
-            "  seconds).\n",
-            "  --exists-action <action>\n",
-            "  Default\n",
-            "  action when\n",
-            "  a path\n",
-            "  already\n",
-            "  exists:\n",
-            "  (s)witch,\n",
-            "  (i)gnore,\n",
-            "  (w)ipe,\n",
-            "  (b)ackup,\n",
-            "  (a)bort.\n",
-            "  --trusted-host <hostname>\n",
-            "  Mark this\n",
-            "  host or\n",
-            "  host:port\n",
-            "  pair as\n",
-            "  trusted,\n",
-            "  even though\n",
-            "  it does not\n",
-            "  have valid\n",
-            "  or any\n",
-            "  HTTPS.\n",
-            "  --cert <path>\n",
-            "  Path to\n",
-            "  PEM-encoded\n",
-            "  CA\n",
-            "  certificate\n",
-            "  bundle. If\n",
-            "  provided,\n",
-            "  overrides\n",
-            "  the\n",
-            "  default.\n",
-            "  See 'SSL\n",
-            "  Certificate\n",
-            "  Verificatio\n",
-            "  n' in pip d\n",
-            "  ocumentatio\n",
-            "  n for more \n",
-            "  information\n",
-            "  .\n",
-            "  --client-cert <path>\n",
-            "  Path to SSL\n",
-            "  client cert\n",
-            "  ificate, a\n",
-            "  single file\n",
-            "  containing\n",
-            "  the private\n",
-            "  key and the\n",
-            "  certificate\n",
-            "  in PEM\n",
-            "  format.\n",
-            "  --cache-dir <dir>\n",
-            "  Store the\n",
-            "  cache data\n",
-            "  in <dir>.\n",
-            "  --no-cache-dir\n",
-            "  Disable the\n",
-            "  cache.\n",
-            "  --disable-pip-version-check\n",
-            "  Don't perio\n",
-            "  dically\n",
-            "  check PyPI\n",
-            "  to\n",
-            "  determine\n",
-            "  whether a\n",
-            "  new version\n",
-            "  of pip is\n",
-            "  available\n",
-            "  for\n",
-            "  download.\n",
-            "  Implied\n",
-            "  with --no-\n",
-            "  index.\n",
-            "  --no-color\n",
-            "  Suppress\n",
-            "  colored\n",
-            "  output.\n",
-            "  --no-python-version-warning\n",
-            "  Silence\n",
-            "  deprecation\n",
-            "  warnings\n",
-            "  for\n",
-            "  upcoming\n",
-            "  unsupported\n",
-            "  Pythons.\n",
-            "  --use-feature <feature>\n",
-            "  Enable new \n",
-            "  functionali\n",
-            "  ty, that\n",
-            "  may be\n",
-            "  backward in\n",
-            "  compatible.\n",
-            "  --use-deprecated <feature>\n",
-            "  Enable\n",
-            "  deprecated \n",
-            "  functionali\n",
-            "  ty, that\n",
-            "  will be\n",
-            "  removed in\n",
-            "  the future.\n"
-          ]
-        }
-      ]
+        "id": "JmTxLslqKrex"
+      }
     },
     {
       "cell_type": "code",
